--- a/articles/til-2026-01-30.md
+++ b/articles/til-2026-01-30.md
@@ -3,7 +3,7 @@ title: "NeovimとVSCodeのJupyterを同期する拡張機能を自作した話"
 emoji: "🧪"
 type: "idea" # tech / idea / opinion
 topics: [neovim,vscode,jupyter,python,datascience]
-published: false
+published: true
 ---
 
 ## はじめに
