added massage for images/ lost

--- a/articles/til-2025-08-16.md
+++ b/articles/til-2025-08-16.md
@@ -11,6 +11,10 @@ published: true
 誤った情報が含まれている場合もありますので、あらかじめご了承ください。
 :::
 
+:::message
+初心者の頃に書いた記事ということもあり、画像ファイル等の整理が不十分で、現在までの過程で一部消失してしまっているようです。ご了承ください。
+:::
+
 # はじめに
 
 データ分析の勉強を始めて1か月ほど経ちました。  
